[gd_scene load_steps=2 format=3 uid="uid://du58tt52ywqnw"]

[ext_resource type="Script" path="res://Items/Weapons/Magic/TestSpell/Scripts/test_spell.gd" id="1_pmq3p"]

[node name="TestSpell" type="Node2D"]
script = ExtResource("1_pmq3p")

[node name="HoldBar" type="ProgressBar" parent="."]
offset_left = -132.0
offset_top = -317.0
offset_right = 138.0
offset_bottom = -290.0

[node name="InputIconContainer" type="HBoxContainer" parent="."]
offset_left = -129.0
offset_top = -371.0
offset_right = -89.0
offset_bottom = -331.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
